log
Tue 09 May 2023 11:02:15 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
97fbe4a
Tue 09 May 2023 11:02:44 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:13: error: expected expression before ‘]’ token
   40 |   heapArray[] = {0};
      |             ^
heap.c:39:13: error: variable ‘heapArray’ set but not used [-Werror=unused-but-set-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f6632d
Tue 09 May 2023 11:02:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:18: error: expected expression before ‘{’ token
   40 |   heapArray[0] = {0};
      |                  ^
Compilation failed
01c794c
